--- a/index.html
+++ b/index.html
@@ -93,18 +93,22 @@
       <div class = "outer-container">
         <div class = inner-container>
           <label for = "language">Language:</label>
-          <select name="language" id="">
-            <option value="" selected>Choose language</option> 
-            <option value="267">English</option>
-            <option value="269">Spanish</option>
-            <option value="268">French</option>
-            <option value="6876">Arabian</option>
-            <option value="10906">Russian</option>
-          </select>
+          <div class = "selectionStyle">
+            <select name="language" id="">
+              <option value="" selected>Choose language</option> 
+              <option value="267">English</option>
+              <option value="269">Spanish</option>
+              <option value="268">French</option>
+              <option value="6876">Arabian</option>
+              <option value="10906">Russian</option>
+            </select>
+          </div>
         </div>
 
         <!-- <a id = "linkToReport"><button id = "getReports">Get Reports</button></a> -->
-        <a href="./report/reports.html"><button id = "getReports">Search</button></a> <!-- We are to comment out when we are done with report file -->
+        <div id="searchButton">
+          <a href="./report/reports.html"><button id = "getReports">Search</button></a> <!-- We are to comment out when we are done with report file -->
+        </div>
       </div>
     </div>
     <div id = "right-content">
