added style to the list of title

--- a/report/reports.html
+++ b/report/reports.html
@@ -20,7 +20,7 @@
     </nav>
   </header>
 
-  <h2>Report List:</h2>
+  <h2>Search Results List:</h2>
 
   <div id = "info">
     <ul id = title_section></ul>
