--- a/report/reportsinfo.html
+++ b/report/reportsinfo.html
@@ -16,13 +16,12 @@
         <li><a href="#" title="Disasters">Disasters</a></li>
         <li><a href="#" title="Countries">Countries</a></li>
         <li><a href="#" title="FAQs">FAQs</a></li>
-        <li><a href="./reports.html" title="Back">Back</a></li>
       </ul>
     </nav>
   </header>
 
-  <h2>Report Info:</h2>
-
+  <h2 class = "header2_for_other">Report Info:</h2>
+  <a href="./reports.html" title="Back" id = "back_link">Back to Listed Results</a>
   <div id = "report_information"></div>
 
 
