working on hamburger

--- a/report/reportsinfo.html
+++ b/report/reportsinfo.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="../responsive_style.css">
+  <script src="https://kit.fontawesome.com/606dd3ae68.js" crossorigin="anonymous"></script>
   <title>Report Info:</title>
 </head>
 <body>
@@ -18,6 +20,7 @@
         <li><a href="#" title="FAQs">FAQs</a></li>
       </ul>
     </nav>
+    <div class="hamburger"><i class="fas fa-bars"></i></div><!-- We need to put a hamburger  -->
   </header>
 
   <h2 class = "header2_for_other">Report Info:</h2>
