--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Phase 1 Project Prototype</title>
   <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./responsive_style.css">
+  <title>Phase 1 Project Prototype</title>
+  <script src="https://kit.fontawesome.com/606dd3ae68.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
@@ -18,6 +20,16 @@
         <li><a href="#" title="FAQs">FAQs</a></li>
       </ul>
     </nav>
+    <div class="hamburger">
+      <i class="fas fa-bars"></i>
+      <ul id = "myDropdown" class="ham-dropdowncontent">
+        <li id="">Home</li>
+        <li>About</li>
+        <li>Disasters</li>
+        <li>Countries</li>
+        <li>FAQs</li>
+      </ul>
+    </div><!-- We need to put a hamburger  -->
   </header>
 
   <div id = "flex">
@@ -50,7 +62,7 @@
 
       <div class = "outer-container">
         <div class = inner-container>
-          <label for = "organization">Source Organization</label>
+          <label for = "organization" id = "organization"><span>Source Organization</span></label>
           <div class = "selectionStyle">
             <select name="organization" class="selection-box">
               <option value="" selected>Organization type</option> 
