still working on responsive part

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       </ul>
     </nav>
     <div class="hamburger">
-      <i class="fas fa-bars"></i>
+      <i id = ham-icon class="hambtn fas fa-bars"></i>
       <ul id = "myDropdown" class="ham-dropdowncontent">
-        <li id="">Home</li>
-        <li>About</li>
-        <li>Disasters</li>
-        <li>Countries</li>
-        <li>FAQs</li>
+        <li id = "mark1"><a href="#" title="Home" id="">Home</a></li>
+        <li><a href="#" title="About">About</a></li>
+        <li><a href="#" title="Disasters">Disasters</a></li>
+        <li><a href="#" title="Countries">Countries</a></li>
+        <li><a href="#" title="FAQs">FAQs</a></li>
       </ul>
     </div><!-- We need to put a hamburger  -->
   </header>
