--- a/report/reports.html
+++ b/report/reports.html
@@ -20,7 +20,16 @@
         <li><a href="#" title="FAQs">FAQs</a></li>
       </ul>
     </nav>
-    <div class="hamburger"><i class="fas fa-bars"></i></div><!-- We need to put a hamburger  -->
+    <div class="hamburger">
+      <i id = ham-icon class="hambtn fas fa-bars"></i>
+      <ul id = "myDropdown" class="ham-dropdowncontent">
+        <li><a href="../index.html" title="Home" id="">Home</a></li>
+        <li><a href="#" title="About">About</a></li>
+        <li><a href="#" title="Disasters">Disasters</a></li>
+        <li><a href="#" title="Countries">Countries</a></li>
+        <li><a href="#" title="FAQs">FAQs</a></li>
+      </ul>
+    </div><!-- We need to put a hamburger  -->
   </header>
 
   <h2 class = "header2_for_other">Search Results List:</h2>
@@ -28,7 +37,6 @@
   <div id = "info">
     <ul id = title_section></ul>
   </div>
-  
   <script src="./redirect.js" type="text/javascript" asyn defer></script>
 </body>
 </html>
