added the filter parameter to the url

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class = inner-container>
           <label for = "organization" id = "organization"><span>Source Organization</span></label>
           <div class = "selectionStyle">
-            <select name="organization" class="selection-box">
+            <select name="organization" class="selection-box" id = "organizationSelect">
               <option value="" selected>Organization type</option> 
               <option value="270">Academic and Research Institution</option>
               <option value="271">Government</option>
@@ -79,7 +79,7 @@
         <div class = inner-container>
           <label for="disaster">Disasters Type</label>
           <div class="selectionStyle">
-            <select name="disaster" class="selection-box">
+            <select name="disaster" class="selection-box" id = "disasterSelect">
               <option value="" selected>Select disaster</option>
               <option value="4653">Cold Wave</option>
               <option value="4672">Drought</option>
@@ -112,7 +112,7 @@
         <div class = inner-container>
           <label for = "language">Language:</label>
           <div class = "selectionStyle">
-            <select name="language" class="selection-box">
+            <select name="language" class="selection-box" id = "languageSelect">
               <option value="" selected>Choose language</option> 
               <option value="267">English</option>
               <option value="269">Spanish</option>
