added parameter box, made it responsive. -now missing js to change content on parameter

--- a/report/reports.html
+++ b/report/reports.html
@@ -32,6 +32,24 @@
     </div><!-- We need to put a hamburger  -->
   </header>
 
+  <div id = "searchParameter" class = "flexPara">
+    <h2 id = 'header2Para'>Previous Search Parameters:</h2>
+    <div id = "searchParaText" class = "flexPara">
+      <div class = "flexPara flexitems">
+        <p id = "keypara">Keyword(s): Non Given</p>
+        <p id = "disasterpara">Disaster Type: Non Given</p>
+      </div>
+      <div class = "flexPara flexitems">
+        <p id = "countrypara">Country: Non Given</p>
+        <p id = "orgpara">Organization: Non Given</p>
+      </div>
+      <div class = "flexPara flexitems">
+        <p id = "langpara">Language: Non Given</p>
+        <p id = "none"></p>
+      </div>
+    </div>
+  </div>
+
   <h2 class = "header2_for_other">Search Results List:</h2>
 
   <div id = "info">
