--- a/countries/country.html
+++ b/countries/country.html
@@ -16,29 +16,28 @@
         <li><a href="../index.html" title="Home">Home</a></li>
         <li><a href="#" title="About">About</a></li>
         <li><a href="#" title="Disasters">Disasters</a></li>
-        <li><a href="../countries/country.html" title="Countries">Countries</a></li>
+        <li><a href="#" title="Countries">Countries</a></li>
         <li><a href="#" title="FAQs">FAQs</a></li>
       </ul>
     </nav>
     <div class="hamburger">
-      <i id = ham-icon class="hambtn fas fa-bars"></i>
-      <ul id = "myDropdown" class="ham-dropdowncontent">
-        <li><a href="../index.html" title="Home" id="">Home</a></li>
+      <i id="ham-icon" class="hambtn fas fa-bars"></i>
+      <ul id="myDropdown" class="ham-dropdowncontent">
+        <li><a href="/index.html" title="Home" id="">Home</a></li>
         <li><a href="#" title="About">About</a></li>
         <li><a href="#" title="Disasters">Disasters</a></li>
-        <li><a href="../countries/country.html" title="Countries">Countries</a></li>
+        <li><a href="#" title="Countries">Countries</a></li>
         <li><a href="#" title="FAQs">FAQs</a></li>
       </ul>
     </div><!-- We need to put a hamburger  -->
   </header>
 
-  <h2 class = "header2_for_other">Report Info:</h2>
-  <a href="./reports.html" title="Back" id = "back_link">Back to Listed Results</a>
-  <div id = "report_information"></div>
+  <h2 class="header2_for_other">List of Countries:</h2>
+  <div id="report_information"></div>
 
 
 
 
-  <script src="./report_info.js"></script>
+  <script src="./country.js"></script>
 </body>
 </html>
