--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li><a href="#" title="Home" id="mark">Home</a></li>
         <li><a href="#" title="About">About</a></li>
         <li><a href="#" title="Disasters">Disasters</a></li>
-        <li><a href="#" title="Countries">Countries</a></li>
+        <li><a href="./countries/country.html" title="Countries">Countries</a></li>
         <li><a href="#" title="FAQs">FAQs</a></li>
       </ul>
     </nav>
@@ -26,7 +26,7 @@
         <li id = "mark1"><a href="#" title="Home" id="">Home</a></li>
         <li><a href="#" title="About">About</a></li>
         <li><a href="#" title="Disasters">Disasters</a></li>
-        <li><a href="#" title="Countries">Countries</a></li>
+        <li><a href="./countries/country.html" title="Countries">Countries</a></li>
         <li><a href="#" title="FAQs">FAQs</a></li>
       </ul>
     </div><!-- We need to put a hamburger  -->
