--- a/report/reports.html
+++ b/report/reports.html
@@ -14,9 +14,9 @@
     <nav>
       <ul id = "navUl">
         <li><a href="../index.html" title="Home">Home</a></li>
-        <li><a href="./reportsinfo.html" title = "About">About</a></li>
+        <li><a href="#" title = "About">About</a></li>
         <li><a href="#" title="Disasters">Disasters</a></li>
-        <li><a href="#" title="Countries">Countries</a></li>
+        <li><a href="../countries/country.html" title="Countries">Countries</a></li>
         <li><a href="#" title="FAQs">FAQs</a></li>
       </ul>
     </nav>
@@ -26,7 +26,7 @@
         <li><a href="../index.html" title="Home" id="">Home</a></li>
         <li><a href="#" title="About">About</a></li>
         <li><a href="#" title="Disasters">Disasters</a></li>
-        <li><a href="#" title="Countries">Countries</a></li>
+        <li><a href="../countries/country.html" title="Countries">Countries</a></li>
         <li><a href="#" title="FAQs">FAQs</a></li>
       </ul>
     </div><!-- We need to put a hamburger  -->
