--- a/countries/countryinfo.html
+++ b/countries/countryinfo.html
@@ -23,7 +23,7 @@
     <div class="hamburger">
       <i id="ham-icon" class="hambtn fas fa-bars"></i>
       <ul id="myDropdown" class="ham-dropdowncontent">
-        <li><a href="/index.html" title="Home" id="">Home</a></li>
+        <li><a href="../index.html" title="Home" id="">Home</a></li>
         <li><a href="#" title="About">About</a></li>
         <li><a href="#" title="Disasters">Disasters</a></li>
         <li><a href="#" title="Countries">Countries</a></li>
@@ -32,12 +32,12 @@
     </div><!-- We need to put a hamburger  -->
   </header>
 
-  <h2 class="header2_for_other">List of Countries:</h2>
-  <div id="country_list"></div>
+  <h2 class="header2_for_other">Country Description:</h2>
+  <div id="country_description"></div>
 
 
 
 
-  <script src="./country.js"></script>
+  <script src="./country_info.js"></script>
 </body>
 </html>
