removed yarn and parcel-bundler to make the pages work. Added script tag to html pages with axios package in the tag

--- a/countries/country.html
+++ b/countries/country.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="../style.css">
   <link rel="stylesheet" href="../responsive_style.css">
   <script src="https://kit.fontawesome.com/606dd3ae68.js" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script> <!-- Axio is js library which uses ajax concept -->
+  <script src="./country.js" type="module" defer></script>
   <title>Report Info:</title>
 </head>
 <body>
@@ -23,7 +25,7 @@
     <div class="hamburger">
       <i id="ham-icon" class="hambtn fas fa-bars"></i>
       <ul id="myDropdown" class="ham-dropdowncontent">
-        <li><a href="/index.html" title="Home" id="">Home</a></li>
+        <li><a href="../index.html" title="Home" id="">Home</a></li>
         <li><a href="#" title="About">About</a></li>
         <li><a href="#" title="Disasters">Disasters</a></li>
         <li><a href="#" title="Countries">Countries</a></li>
