--- a/countries/countryinfo.html
+++ b/countries/countryinfo.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../style.css">
   <link rel="stylesheet" href="../responsive_style.css">
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script> <!-- Axio is js library which uses ajax concept -->
+  <script src="./country_info.js" text="module" defer></script>
   <script src="https://kit.fontawesome.com/606dd3ae68.js" crossorigin="anonymous"></script>
   <title>Report Info:</title>
 </head>
@@ -13,17 +15,18 @@
     <h1>WeMundo</h1>
     <nav>
       <ul>
-        <li><a href="../index.html" title="Home">Home</a></li>
+        <li><a href="/" title="Home">Home</a></li>
         <li><a href="#" title="About">About</a></li>
         <li><a href="#" title="Disasters">Disasters</a></li>
         <li><a href="#" title="Countries">Countries</a></li>
         <li><a href="#" title="FAQs">FAQs</a></li>
+     
       </ul>
     </nav>
     <div class="hamburger">
       <i id="ham-icon" class="hambtn fas fa-bars"></i>
       <ul id="myDropdown" class="ham-dropdowncontent">
-        <li><a href="../index.html" title="Home" id="">Home</a></li>
+        <li><a href="/" title="Home" id="">Home</a></li>
         <li><a href="#" title="About">About</a></li>
         <li><a href="#" title="Disasters">Disasters</a></li>
         <li><a href="#" title="Countries">Countries</a></li>
@@ -38,6 +41,6 @@
 
 
 
-  <script src="./country_info.js"></script>
+  
 </body>
 </html>
