--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="./responsive_style.css">
   <title>Phase 1 Project Prototype</title>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script> <!-- Axio is js library which uses ajax concept -->
+  <script src="./main.js" type="module" defer></script>
   <script src="https://kit.fontawesome.com/606dd3ae68.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -138,6 +140,6 @@
 
 
 
-  <script src="./main.js" type="text/javascript" async defer></script>
+  
 </body>
 </html>
