--- a/report/reports.html
+++ b/report/reports.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../style.css">
   <link rel="stylesheet" href="../responsive_style.css">
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script> <!-- Axio is js library which uses ajax concept -->
+  <script src="./redirect.js" type="module" defer></script>
   <script src="https://kit.fontawesome.com/606dd3ae68.js" crossorigin="anonymous"></script>
   <title>Report Page</title>
 </head>
@@ -55,6 +57,5 @@
   <div id = "info">
     <ul id = title_section></ul>
   </div>
-  <script src="./redirect.js" type="text/javascript" asyn defer></script>
 </body>
 </html>
