--- a/report/reportsinfo.html
+++ b/report/reportsinfo.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../style.css">
   <link rel="stylesheet" href="../responsive_style.css">
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script> <!-- Axio is js library which uses ajax concept -->
+  <script src="./report_info.js" type = "module" defer></script>
   <script src="https://kit.fontawesome.com/606dd3ae68.js" crossorigin="anonymous"></script>
   <title>Report Info:</title>
 </head>
@@ -39,6 +41,5 @@
 
 
 
-  <script src="./report_info.js"></script>
 </body>
 </html>
