--- a/report/reports.html
+++ b/report/reports.html
@@ -22,6 +22,7 @@
         <li><a href="#" title="FAQs">FAQs</a></li>
       </ul>
     </nav>
+    <!-- We need to put a hamburger  -->
     <div class="hamburger">
       <i id = ham-icon class="hambtn fas fa-bars"></i>
       <ul id = "myDropdown" class="ham-dropdowncontent">
@@ -31,7 +32,7 @@
         <li><a href="../countries/country.html" title="Countries">Countries</a></li>
         <li><a href="#" title="FAQs">FAQs</a></li>
       </ul>
-    </div><!-- We need to put a hamburger  -->
+    </div>
   </header>
 
   <div id = "searchParameter" class = "flexPara">
